--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="288"
+    android:viewportHeight="203.0625">
+  <group android:scaleX="0.3773769"
+      android:scaleY="0.2660802"
+      android:translateX="87.64504"
+      android:translateY="73.0967">
+    <group android:translateY="158.48438">
+      <path android:pathData="M10.6875,-103.078125L89.4375,-103.078125L89.4375,-80.9375L42.6875,-80.9375L42.6875,-62.9375L82.625,-62.9375L82.625,-42.125L42.6875,-42.125L42.6875,-0L10.6875,-0L10.6875,-103.078125Z"
+          android:fillColor="#F4A226"/>
+      <path android:pathData="M105.640625,-103.078125L134.32812,-103.078125L134.32812,0L105.640625,0L105.640625,-103.078125Z"
+          android:fillColor="#F4A226"/>
+      <path android:pathData="M153.70312,-103.078125L182.32812,-103.078125L182.32812,-83.609375L153.70312,-83.609375L153.70312,-103.078125ZM153.70312,-74.671875L182.32812,-74.671875L182.32812,0L153.70312,0L153.70312,-74.671875Z"
+          android:fillColor="#F4A226"/>
+      <path android:pathData="M194.1875,-74.671875L228.14062,-74.671875L240.03125,-53.859375L253.8125,-74.671875L285.375,-74.671875L259.92188,-39.09375L287.20312,0L253.8125,0L240.03125,-24.046875L223.78125,0L192.78125,0L219.92188,-39.09375L194.1875,-74.671875Z"
+          android:fillColor="#F4A226"/>
+    </group>
+  </group>
 </vector>
